# weather

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
api/provider/: weather.py
api/provider/openweathermap/: weather.py
app/: main.py
app/provider/: weather.py
tests/: test_main.py  test_provider_openweathermap.py
