[tool.poetry]
name = "Weather API"
version = "0.1.0"
description = "A FastAPI-based Python application used as demo for predicting temperature and rainfall"
authors = ["Miguel"]
readme = "README.md"
packages = [
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
uvicorn = "^0.27.1"
pre-commit = "^3.6.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
